// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden test（fixtures → 快照锁定产物） > fixtures/pages/basic.vue 产物与快照一致 1`] = `
{
  "js": "// pages/basic（Proteus mp-transform 编译产物）
// AUTO-GENERATED by vite-plugin-mp-transform.ts. DO NOT EDIT.

Page({
  data: {
    title: "Proteus",
    items: ["a","b"],
    show: true,
    avatar: "/avatar.png",
  },
  onLoad(options) {
    const params = {}
    const keys = Object.keys(options || {})
    for (let i = 0; i < keys.length; i++) {
      const k = keys[i]
      const v = options[k]
      const s = decodeURIComponent(v)
      try { params[k] = (s.startsWith("{") || s.startsWith("[")) ? JSON.parse(s) : s } catch { params[k] = s }
    }
    this.setData(params)
  },
  handleTap() {

  console.log('tapped')

},
})
",
  "warnings": [],
  "wxml": "<view class="page-data-v-e934cf">
<text class="proteus-h1-data-v-e934cf">{{ title }}</text>
<text wx:if="{{show}}" class="proteus-p-data-v-e934cf">visible</text>
<view wx:for="{{items}}" wx:for-item="item" wx:for-index="idx" wx:key="idx" class="row-data-v-e934cf">{{ idx }}.{{ item }}</view>
<view bindtap="handleTap" class="proteus-a-data-v-e934cf">link</view>
<image src="{{avatar}}" alt="avatar" />
</view>",
  "wxss": ".proteus-h1 { display: block; font-size: 64rpx; font-weight: 700; margin: 0 0 0.67em; }
.proteus-h2 { display: block; font-size: 48rpx; font-weight: 700; margin: 0 0 0.83em; }
.proteus-h3 { display: block; font-size: 36rpx; font-weight: 700; margin: 0 0 1em; }
.proteus-h4 { display: block; font-size: 32rpx; font-weight: 700; margin: 0 0 1.33em; }
.proteus-h5 { display: block; font-size: 28rpx; font-weight: 700; margin: 0 0 1.67em; }
.proteus-h6 { display: block; font-size: 24rpx; font-weight: 700; margin: 0 0 2.33em; }
.proteus-p { display: block; margin: 0 0 1em; }
.proteus-a { color: #1a7af8; text-decoration: underline; }

.proteus-h1-data-v-e934cf { display: block; font-size: 64rpx; font-weight: 700; margin: 0 0 0.67em; }.proteus-h2-data-v-e934cf { display: block; font-size: 48rpx; font-weight: 700; margin: 0 0 0.83em; }.proteus-h3-data-v-e934cf { display: block; font-size: 36rpx; font-weight: 700; margin: 0 0 1em; }.proteus-h4-data-v-e934cf { display: block; font-size: 32rpx; font-weight: 700; margin: 0 0 1.33em; }.proteus-h5-data-v-e934cf { display: block; font-size: 28rpx; font-weight: 700; margin: 0 0 1.67em; }.proteus-h6-data-v-e934cf { display: block; font-size: 24rpx; font-weight: 700; margin: 0 0 2.33em; }.proteus-p-data-v-e934cf { display: block; margin: 0 0 1em; }.proteus-a-data-v-e934cf { color: #1a7af8; text-decoration: underline; }.page-data-v-e934cf {
  padding: 40rpx;
}.row-data-v-e934cf {
  margin: 8rpx 0;
}
",
}
`;

exports[`golden test（fixtures → 快照锁定产物） > fixtures/pages/input.vue 产物与快照一致 1`] = `
{
  "js": "// pages/input（Proteus mp-transform 编译产物）
// AUTO-GENERATED by vite-plugin-mp-transform.ts. DO NOT EDIT.

Page({
  data: {
    text: "",
  },
  onLoad(options) {
    const params = {}
    const keys = Object.keys(options || {})
    for (let i = 0; i < keys.length; i++) {
      const k = keys[i]
      const v = options[k]
      const s = decodeURIComponent(v)
      try { params[k] = (s.startsWith("{") || s.startsWith("[")) ? JSON.parse(s) : s } catch { params[k] = s }
    }
    this.setData(params)
  },
  proteusOnTextInput(e) { this.setData({ text: e.detail.value }) },
})
",
  "warnings": [],
  "wxml": "<view>
<input value="{{text}}" bindinput="proteusOnTextInput" placeholder="type" />
<textarea value="{{text}}" bindinput="proteusOnTextInput" />
</view>",
  "wxss": ".proteus-h1 { display: block; font-size: 64rpx; font-weight: 700; margin: 0 0 0.67em; }
.proteus-h2 { display: block; font-size: 48rpx; font-weight: 700; margin: 0 0 0.83em; }
.proteus-h3 { display: block; font-size: 36rpx; font-weight: 700; margin: 0 0 1em; }
.proteus-h4 { display: block; font-size: 32rpx; font-weight: 700; margin: 0 0 1.33em; }
.proteus-h5 { display: block; font-size: 28rpx; font-weight: 700; margin: 0 0 1.67em; }
.proteus-h6 { display: block; font-size: 24rpx; font-weight: 700; margin: 0 0 2.33em; }
.proteus-p { display: block; margin: 0 0 1em; }
.proteus-a { color: #1a7af8; text-decoration: underline; }

.proteus-h1 { display: block; font-size: 64rpx; font-weight: 700; margin: 0 0 0.67em; }
.proteus-h2 { display: block; font-size: 48rpx; font-weight: 700; margin: 0 0 0.83em; }
.proteus-h3 { display: block; font-size: 36rpx; font-weight: 700; margin: 0 0 1em; }
.proteus-h4 { display: block; font-size: 32rpx; font-weight: 700; margin: 0 0 1.33em; }
.proteus-h5 { display: block; font-size: 28rpx; font-weight: 700; margin: 0 0 1.67em; }
.proteus-h6 { display: block; font-size: 24rpx; font-weight: 700; margin: 0 0 2.33em; }
.proteus-p { display: block; margin: 0 0 1em; }
.proteus-a { color: #1a7af8; text-decoration: underline; }
",
}
`;

exports[`golden test（fixtures → 快照锁定产物） > fixtures/pages/rich.vue 产物与快照一致 1`] = `
{
  "js": "// pages/rich（Proteus mp-transform 编译产物）
// AUTO-GENERATED by vite-plugin-mp-transform.ts. DO NOT EDIT.

Page({
  data: {
    html: "<p>hi</p>",
  },
  onLoad(options) {
    const params = {}
    const keys = Object.keys(options || {})
    for (let i = 0; i < keys.length; i++) {
      const k = keys[i]
      const v = options[k]
      const s = decodeURIComponent(v)
      try { params[k] = (s.startsWith("{") || s.startsWith("[")) ? JSON.parse(s) : s } catch { params[k] = s }
    }
    this.setData(params)
  },
})
",
  "warnings": [],
  "wxml": "<rich-text nodes="{{html}}" />",
  "wxss": ".proteus-h1 { display: block; font-size: 64rpx; font-weight: 700; margin: 0 0 0.67em; }
.proteus-h2 { display: block; font-size: 48rpx; font-weight: 700; margin: 0 0 0.83em; }
.proteus-h3 { display: block; font-size: 36rpx; font-weight: 700; margin: 0 0 1em; }
.proteus-h4 { display: block; font-size: 32rpx; font-weight: 700; margin: 0 0 1.33em; }
.proteus-h5 { display: block; font-size: 28rpx; font-weight: 700; margin: 0 0 1.67em; }
.proteus-h6 { display: block; font-size: 24rpx; font-weight: 700; margin: 0 0 2.33em; }
.proteus-p { display: block; margin: 0 0 1em; }
.proteus-a { color: #1a7af8; text-decoration: underline; }

.proteus-h1 { display: block; font-size: 64rpx; font-weight: 700; margin: 0 0 0.67em; }
.proteus-h2 { display: block; font-size: 48rpx; font-weight: 700; margin: 0 0 0.83em; }
.proteus-h3 { display: block; font-size: 36rpx; font-weight: 700; margin: 0 0 1em; }
.proteus-h4 { display: block; font-size: 32rpx; font-weight: 700; margin: 0 0 1.33em; }
.proteus-h5 { display: block; font-size: 28rpx; font-weight: 700; margin: 0 0 1.67em; }
.proteus-h6 { display: block; font-size: 24rpx; font-weight: 700; margin: 0 0 2.33em; }
.proteus-p { display: block; margin: 0 0 1em; }
.proteus-a { color: #1a7af8; text-decoration: underline; }
",
}
`;

exports[`golden test（fixtures → 快照锁定产物） > fixtures/pages/tab.vue 产物与快照一致 1`] = `
{
  "js": "// pages/tab（Proteus mp-transform 编译产物）
// AUTO-GENERATED by vite-plugin-mp-transform.ts. DO NOT EDIT.

Page({
  data: {
    count: 0,
  },
  onLoad(options) {
    const params = {}
    const keys = Object.keys(options || {})
    for (let i = 0; i < keys.length; i++) {
      const k = keys[i]
      const v = options[k]
      const s = decodeURIComponent(v)
      try { params[k] = (s.startsWith("{") || s.startsWith("[")) ? JSON.parse(s) : s } catch { params[k] = s }
    }
    this.setData(params)
  },
})
",
  "warnings": [],
  "wxml": "<view class="tab-data-v-5a03df">{{ count }}</view>",
  "wxss": ".proteus-h1 { display: block; font-size: 64rpx; font-weight: 700; margin: 0 0 0.67em; }
.proteus-h2 { display: block; font-size: 48rpx; font-weight: 700; margin: 0 0 0.83em; }
.proteus-h3 { display: block; font-size: 36rpx; font-weight: 700; margin: 0 0 1em; }
.proteus-h4 { display: block; font-size: 32rpx; font-weight: 700; margin: 0 0 1.33em; }
.proteus-h5 { display: block; font-size: 28rpx; font-weight: 700; margin: 0 0 1.67em; }
.proteus-h6 { display: block; font-size: 24rpx; font-weight: 700; margin: 0 0 2.33em; }
.proteus-p { display: block; margin: 0 0 1em; }
.proteus-a { color: #1a7af8; text-decoration: underline; }

.proteus-h1-data-v-5a03df { display: block; font-size: 64rpx; font-weight: 700; margin: 0 0 0.67em; }.proteus-h2-data-v-5a03df { display: block; font-size: 48rpx; font-weight: 700; margin: 0 0 0.83em; }.proteus-h3-data-v-5a03df { display: block; font-size: 36rpx; font-weight: 700; margin: 0 0 1em; }.proteus-h4-data-v-5a03df { display: block; font-size: 32rpx; font-weight: 700; margin: 0 0 1.33em; }.proteus-h5-data-v-5a03df { display: block; font-size: 28rpx; font-weight: 700; margin: 0 0 1.67em; }.proteus-h6-data-v-5a03df { display: block; font-size: 24rpx; font-weight: 700; margin: 0 0 2.33em; }.proteus-p-data-v-5a03df { display: block; margin: 0 0 1em; }.proteus-a-data-v-5a03df { color: #1a7af8; text-decoration: underline; }.tab-data-v-5a03df {
  font-size: 28rpx;
}
",
}
`;
